--- a/style.css
+++ b/style.css
@@ -51,12 +51,12 @@ button:hover {
     right: 10px;
 }
 body{
-    background-color: #DCC4C4;
+    background-color: #29eb9a;
 }
 
 .logo{
     width: 100%;
-    border: solid #DCC4C4;
+    border: solid #0f5a2c;
 }
 
 
