--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ body{
     align-items: center;
     padding: 12px;
     justify-content: space-around;
-    background-color:#FCAC95;
+    background-color:#8fe6b3;
     color: black;
     position: relative;
     top: 100%;
