--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ button {
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
-    background-color: rgba(122, 228, 112, 0.5);
+    background-color: #FBE8C5(122, 228, 112, 0.5);
     color: white;
     border: none;
     font-size: 1.5em;
