--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ body{
 
 .logo{
     width: 100%;
-    border: solid #93ecb5;
+    border: solid #FBE8C5;
 }
 
 
@@ -77,7 +77,7 @@ body{
     align-items: center;
     padding: 12px;
     justify-content: space-around;
-    background-color:#8febb56e;
+    background-color:#FBE8C5;
     color: black;
     position: relative;
     top: 100%;
