--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ button {
     top: 50%;
     transform: translateY(-50%);
     background-color: #FBE8C5(122, 228, 112, 0.5);
-    color: white;
+    color: rgb(199, 15, 15);
     border: none;
     font-size: 1.5em;
     cursor: pointer;
