--- a/style.css
+++ b/style.css
@@ -100,3 +100,25 @@ body{
     color: black;
     position: relative;
     }
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    background-color:#702C16;
+    overflow: hidden;
+}
+li {
+   float: left;
+}
+li a {
+    display: block;
+    color: #FBE8C5;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    top:50%
+}
+li a:hover {
+    background-color: #ddd;
+}
