--- a/style.css
+++ b/style.css
@@ -134,3 +134,24 @@ li a:hover {
     width: 100%;
     text-align: center;
 }
+.carousel {
+    width: 80%;
+    margin: 0 auto;
+    position: relative;
+    overflow: hidden;
+    margin-top: 20px;
+}
+
+.carousel-inner {
+    display: flex;
+    transition: transform 0.5s ease;
+}
+
+.slide {
+    flex: 0 0 100%;
+}
+
+.slide img {
+    width: 50%;
+    height: auto;
+}
