--- a/style.css
+++ b/style.css
@@ -127,10 +127,40 @@ li a:hover {
     align-items: center;
     padding: 12px;
     justify-content: space-around;
-    background-color:#f0ca83;
-    color: black;
+    background-color:#3c1388;
+    color: rgb(39, 228, 54);
     position: relative;
     top: 100%;
     width: 100%;
     text-align: center;
+}
+.main-content {
+    padding: 2rem 0;
+    background-color: #ac2323;
+}
+
+.container {
+    width: 80%;
+    margin: 0 auto;
+    max-width: 900px;
+    text-align: center;
+}
+
+.main-content h2 {
+    font-size: 2rem;
+    margin-bottom: 1rem;
+}
+
+.main-content p {
+    font-size: 1.1rem;
+    margin-bottom: 1.5rem;
+}
+
+.main-content ul {
+    list-style-type: none;
+}
+
+.main-content ul li {
+    font-size: 1.1rem;
+    margin-bottom: 0.5rem;
 }
