--- a/style.css
+++ b/style.css
@@ -138,3 +138,10 @@ li a:hover {
     width: 20%; /* Ajuste a largura conforme necessário */
     height: auto; /* Mantém a proporção da imagem */
 }
+.imagem-ajustada {
+    width: 300px; /* Largura desejada */
+    height: 200px; /* Altura desejada */
+    object-fit: cover; /* Redimensiona a imagem mantendo a proporção e corta o excesso */
+    border: 2px solid #333; /* Exemplo de borda para destacar a imagem */
+    border-radius: 10px; /* Exemplo de borda arredondada */
+}
