--- a/style.css
+++ b/style.css
@@ -135,8 +135,8 @@ li a:hover {
     text-align: center;
 }
 .imagem-ajustada {
-    width: 200px; /* Largura desejada */
-    height: 800px; /* Altura desejada */
+    width: 20%; /* Largura desejada */
+    height: 80%; /* Altura desejada */
     object-fit: cover; /* Redimensiona a imagem mantendo a proporção e corta o excesso */
     border: 2px solid #333; /* Exemplo de borda para destacar a imagem */
     border-radius: 10px; /* Exemplo de borda arredondada */
